--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>meus objetivos do ano</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-    <section> class="coteudo-principal"></section>
-    <h2> class="">titulo-principal></titulo-principal></h2>
+    <section> class= "conteudo-principal">
+    <h2> class= "titulo-principal" </h2>
    <div class="botoes"></div> 
-<button class="botao"> autocad</button>
-<button class=""></button>
-<button class=""></button>
+<button class="botao">terminar autocad</button>
+<button class="">arrumar um emprego</button>
 
 </body>
 </html>
